--- a/exhibit1.html
+++ b/exhibit1.html
@@ -56,11 +56,19 @@
             <a href=index.html>Home</a>
             <a href=about.html>About</a>
             <a href=exhibit4.html>Visuals of The Occult</a>
-            <a href=.html>Shtetl Visions</a>
+            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
             <a href=.html>Cinema at War</a>
             <a class="active" href=exhibit1.html>Modern Art in Motion</a>
         </div>
         <h1>Modern Art in Motion</h1>
+        <p>Futurism and Dada are both movements that are part of early modernism, specifically around the years of World War One. 
+            Futurism took place largely in Italy just before the start of the war while Dada began just after the war. 
+            Both groups were reacting to their circumstances in very different cultures despite such close temporal proximity. 
+            The Futurists, in an attempt to move past the classical history that was so revered in Italy, were all in on new 
+            technology and industry. The Futurists sought to glorify war in contrast to the Dada artists, working after the onset 
+            of WWI who were reacting to very real horrors that had previously been unimaginable. Dada is a reaction to a world 
+            which did not make much sense and thus often includes nonsensical elements in their work. Both groups bring a 
+            distinct and important perspective to understanding the time period during which they were working.</p>
   
         <div class="row">
             <div class="column">
@@ -74,9 +82,9 @@
                     militarism. Their focus was on the future and technology and a destruction of all else.</p>
                 <h3>Notable Artists</h3>
                 <ul>
-                    <li><a href="https://www.moma.org/artists/3771">Filippo Tommaso Marinetti</a></li>
-                    <li><a href="https://www.guggenheim.org/artwork/artist/gino-severini">Gino Severini</a></li>
-                    <li><a href="https://www.moma.org/artists/987">Carlo Carrà</a></li>
+                    <li><a href="https://www.moma.org/artists/3771">Filippo Tommaso Marinetti</a>, 1876-1944</li>
+                    <li><a href="https://www.guggenheim.org/artwork/artist/gino-severini">Gino Severini</a>, 1883-1966</li>
+                    <li><a href="https://www.moma.org/artists/987">Carlo Carrà</a>, 1881-1966</li>
                 </ul>
             </div>
             <div class="column">
@@ -86,9 +94,9 @@
                     and often used satire or nonsensical elements as critique of the war and a society which caused it. </p>
                 <h3>Notable Artists</h3>
                 <ul>
-                    <li><a href="https://www.guggenheim.org/artwork/artist/kurt-schwitters">Kurt Schwitters</a></li>
-                    <li><a href="https://www.guggenheim.org/artwork/artist/jean-arp">Jean Arp</a></li>
-                    <li><a href="https://www.guggenheim.org/artwork/artist/theo-van-doesburg">Theo Van Doesburg</a></li>
+                    <li><a href="https://www.guggenheim.org/artwork/artist/kurt-schwitters">Kurt Schwitters</a>, 1887-1948</li>
+                    <li><a href="https://www.guggenheim.org/artwork/artist/jean-arp">Jean Arp</a>, 1886-1966</li>
+                    <li><a href="https://www.guggenheim.org/artwork/artist/theo-van-doesburg">Theo Van Doesburg</a>, 1883-1931</li>
                 </ul>
             </div>
         </div>
@@ -111,10 +119,10 @@
                 alt="Cut with the Kitchen Knife Dada Through the Last Weimar Beer Belly Cultural Epoch of Germany">
                 <h3>Cut with the Kitchen Knife Dada Through the Last Weimar Beer-Belly Cultural Epoch of Germany</h3>
                 <h4>Hannah Höch, 1919</h4>
-                <p id="hoch">Hannah Höch’s <i>Cut with the Kitchen Knife Dada Through the Last Weimar Beer-Belly Cultural Epoch in Germany</i> is a 
-                    photomontage piece commenting on the Dada movement and the contemporary politics of Germany at the time. 
-                    Photomontage and collage art was a popular medium amongst Dada artists as it is an appropriation of popular imagery 
-                    in the taking of newspaper content as well as suggesting the fragmentary nature of culture. For this piece particularly, 
+                <p id="hoch">Hannah Höch’s <i>Cut with the Kitchen Knife Dada Through the Last Weimar Beer-Belly Cultural Epoch in Germany</i> 
+                    is a photomontage piece commenting on the Dada movement and the contemporary politics of Germany at the time. Photomontage 
+                    and collage art was widely used amongst Dada artists. It allowed the appropriation of popular imagery and newspaper 
+                    clippings and also suggested the fragmentary nature of culture as the Dada artists saw it. For this piece particularly, 
                     Höch uses the images of prominent figures, both fellow Dada artists as well as political figures. The composition is a bit 
                     chaotic and it can be difficult to parse through to recognize individual elements, but the piece can be read in quadrants. 
                     The top right shows the “anti-dada”, including various politicians at the time. The lower right is the Dada quadrant, 
@@ -124,8 +132,9 @@
                     here to stay. The bottom left depicts crowds of people around the Communist Party leader Karl Lienbknecht, who is saying 
                     “join Dada!” Höch also includes herself in the composition, at the bottom right on the corner of a map which shows countries 
                     where women had the right to vote. Höch also points to the role of women in politics and art with her title, <i>Cut with the 
-                        Kitchen Knife</i>, which implies an element of the domestic labor that falls on women.</p>
-                    <button onclick="toggleHoch()">Wall Text</button>
+                    Kitchen Knife</i>, which implies an element of the domestic labor that falls on women.
+                    </p>
+                <button onclick="toggleHoch()">Wall Text</button>
                 </div>
         </div>
 
