--- a/exhibit4.html
+++ b/exhibit4.html
@@ -38,12 +38,15 @@
                     color: black;
                 }
             </style>
-            <a class="active" href=exhhibit4.html>Visuals of The Occult </a>
-            <a href=index.html>Home </a>
+            <div class="navigation">
+            <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
+            <a href=index.html>Home</a>
             <a href=about.html>About</a>
-            <a href=.html>Ramona's page</a>
-            <a href=.html>Tyler's page</a>
-            <a href=.html>Emily's Page</a>
+            <a class="active" href=exhhibit4.html>Visuals of The Occult </a>
+            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
+            <a href=.html>Cinema at War</a>
+            <a href=exhibit1.html>Modern Art in Motion</a>
+        </div>
         </div>
     </body>
     </header>
