--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </style>
             <a class="active" href=index.html>Home</a>
             <a href=about.html>About</a>
-            <a href=exhhibit4.html>Visuals of The Occult</a>
-            <a href=.html>Ramona's page</a>
-            <a href=.html>Tyler's page</a>
-            <a href=.html>Emily's Page</a>
+            <a href=exhhibit4.html>Visuals of The Occult </a>
+            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
+            <a href=.html>Cinema at War</a>
+            <a href=exhibit1.html>Modern Art in Motion</a>
         </div>
     </body>
     </header>
