--- a/654final/index.html
+++ b/654final/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="indexStyle.css">
     <title>Homepage</title>
     <meta name="description" content="Final Project Homepage">
     <meta name="keywords" content="HTML,CSS,webpage">
     <meta name="author" content="Alexa Jade Frankelis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="indexStyle.css">
 </head>
 
 <body>
@@ -17,10 +16,10 @@
             <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
             <a class="active" href=index.html>Home</a>
             <a href=about.html>About</a>
-            <a href=.html>Alexis's page</a>
-            <a href=.html>Ramona's page</a>
-            <a href=.html>Tyler's page</a>
-            <a href=.html>Emily's Page</a>
+            <a href=exhibit4.html>Visuals of the Occult</a>
+            <a href=ramonasexhibit.html>Shtetl Visions</a>
+            <a href=.html>Cinema at War</a>
+            <a href=exhibit1.html>Modern Art in Motion</a>
         </div>
     </header>
 
@@ -34,7 +33,7 @@
       <!-- gallery -->
       <div class="row">
         <div class="column">
-          <img src="./images/img_nature.jpg" alt="Exhibit 1: Modern Art in Motion" onclick="myFunction(this);">
+          <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" onclick="myFunction(this);">
         </div>
         <div class="column">
           <img src="./images/img_snow.jpg" alt="Exhibit 2: Cinema at War" onclick="myFunction(this);">
