--- a/654final/index.html
+++ b/654final/index.html
@@ -17,7 +17,7 @@
             <a class="active" href=index.html>Home</a>
             <a href=about.html>About</a>
             <a href=exhibit4.html>Visuals of the Occult</a>
-            <a href=ramonasexhibit.html>Shtetl Visions</a>
+            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
             <a href=.html>Cinema at War</a>
             <a href=exhibit1.html>Modern Art in Motion</a>
         </div>
