--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <h1>Global Museum Gateway: Curated Digital Exhibitions for All</h1>
             <a class="active" href=index.html>Home</a>
             <a href=about.html>About</a>
-            <a href=exhibit4.html>Visuals of the Occult</a>
-            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
-            <a href=.html>Cinema at War</a>
             <a href=exhibit1.html>Modern Art in Motion</a>
+             <a href=.html>Cinema at War</a>
+            <a href=ramonasexhibit.html>Envisioning the Shtetl</a>
+            <a href=exhibit4.html>Visuals of the Occult</a>
+            
         </div>
     </header>
 
@@ -66,7 +67,7 @@
     <p>Each exhibit combines artistic excellence with rich historical narratives, 
         providing an educational and immersive experience for all.</p>
      <ol>
-        <li><a href="https://www.linkedin.com/in/alexa-jade-frankelis/">Modern Art in Motion, By: Emily Drachman</a>
+        <li><a href="exhibit1.html">Modern Art in Motion, By: Emily Drachman</a>
             <ul>
                 <li>This exhibit delves into the revolutionary art movements of the early 20th century, 
                     including Futurism, Dada, and others from 1900 to 1930. 
@@ -84,7 +85,7 @@
                     perspective on storytelling in the shadow of conflict.
             </ul>
         </li>
-        <li><a href="https://www.linkedin.com/in/alexa-jade-frankelis/">Shtetl Visions, By: Ramona Saft</a>    
+        <li><a href="ramonasexhibit.html">Envisioning the Shtetls, By: Ramona Saft</a>    
             <ul>
                 <li>Explore the intimate and poignant depiction of shtetl life in the visual arts of Eastern European 
                     Jewelry during the 19th and 20th centuries. This exhibit highlights the vibrant yet often-overlooked 
@@ -92,7 +93,7 @@
                     challenges, and resilience of shtetl existence. </li>
             </ul>
         </li>
-        <li><a href="https://www.linkedin.com/in/alexa-jade-frankelis/">Visuals of The Occult, By: Alexa Jade Frankelis</a>
+        <li><a href="exhibit4.html">Visuals of The Occult, By: Alexa Jade Frankelis</a>
             <ul>
                 <li> Journey into the mysterious realm of occult photography from the 19th to early 20th century. This exhibit 
                     examines the interplay between spiritualism, mysticism, and visual culture, showcasing rare photographic 
