--- a/exhibit4.html
+++ b/exhibit4.html
@@ -178,7 +178,7 @@
 
       
     <footer id="footer">
-        <p>&copy; Alexa Jade Frankelis, 2024</p>
+        <p>&copy; Global Gateway Museum, 2024</p>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
