--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
       <!-- gallery -->
       <div class="row">
         <div class="column">
-          <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" onclick="myFunction(this);">
+          <img src="./museum654/images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" onclick="myFunction(this);">
         </div>
         <div class="column">
-          <img src="./images/img_snow.jpg" alt="Exhibit 2: Cinema at War" onclick="myFunction(this);">
+          <img src="./museum654/images/img_snow.jpg" alt="Exhibit 2: Cinema at War" onclick="myFunction(this);">
         </div>
         <div class="column">
-          <img src="./images/img_mountains.jpg" alt="Exhibit 3: Shtetl Visions" onclick="myFunction(this);">
+          <img src="./museum654/images/img_mountains.jpg" alt="Exhibit 3: Shtetl Visions" onclick="myFunction(this);">
         </div>
         <div class="column">
-          <img src="./images/img_woman.jpg" alt="Exhibit 4: Visuals of the Occult" onclick="myFunction(this);">
+          <img src="./museum654/images/img_woman.jpg" alt="Exhibit 4: Visuals of the Occult" onclick="myFunction(this);">
         </div>
       </div>
+    
       <div class="container">
         <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
         <img id="expandedImg">
