--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML,CSS,webpage">
     <meta name="author" content="Alexa Jade Frankelis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="indexStyle.css">
 </head>
 
 <body>
@@ -34,16 +34,16 @@
       <!-- gallery -->
       <div class="row">
         <div class="column">
-          <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" onclick="myFunction(this);">
+          <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" style="width:100%" onclick="myFunction(this);">
         </div>
         <div class="column">
-          <img src="./images/img_snow.jpg" alt="Exhibit 2: Cinema at War" onclick="myFunction(this);">
+          <img src="./images/img_snow.jpg" alt="Exhibit 2: Cinema at War" style="width:100%" onclick="myFunction(this);">
         </div>
         <div class="column">
-          <img src="./images/img_mountains.jpg" alt="Exhibit 3: Shtetl Visions" onclick="myFunction(this);">
+          <img src="./images/img_mountains.jpg" alt="Exhibit 3: Shtetl Visions" style="width:100%" onclick="myFunction(this);">
         </div>
         <div class="column">
-          <img src="./images/img_woman.jpg" alt="Exhibit 4: Visuals of the Occult" onclick="myFunction(this);">
+          <img src="./images/img_woman.jpg" alt="Exhibit 4: Visuals of the Occult" style="width:100%" onclick="myFunction(this);">
         </div>
       </div>
     
