--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         </div>
       </div>
     
-      <div class="container">
-        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-        <img id="expandedImg">
-        <div id="imgtext"></div>
-      </div>
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
       
       <script>
       function myFunction(imgs) {
