--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       
     <footer id="footer">
-        <p>&copy; Alexa Jade Frankelis, 2024</p>
+        <p>&copy; Global Museum Gateway, 2024</p>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px"
