--- a/exhibit4.html
+++ b/exhibit4.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML,CSS,webpage">
     <meta name="author" content="Alexa Jade Frankelis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="exhibit4style.css">
 </head>
 
 <body>
