--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:100%" width="500" height="600">
+  <img id="expandedImg" width="500" height="600">
   <div id="imgtext"></div>
 
       
