--- a/exhibit4.html
+++ b/exhibit4.html
@@ -96,12 +96,24 @@
   </script>
 
 
-<div class="content">
+<div class="body">
     <h3>Wall Text</h3>
     <p> The images displayed above are brought to you through the Open Acess Initiative at <a href="https://github.com/metmuseum/openaccess">The Metropolitan Museum</a> 
         using Creative Commons Zero</p>
      <ol>
-        <li><a href="https://www.metmuseum.org/art/collection/search/271509">Carte-de-Visite Album of British and European Royalty</a>    
+        <li><a href="https://www.metmuseum.org/art/collection/search/302466">The Ghost in the Stereoscope</a>
+            <ul>
+                <li>Unknown, ca. 1852</li>
+                <li>"The Ghost in the Stereoscope" exemplifies the merging of Victorian fascination with optical illusions 
+                    and spiritualist practices. Created by the London Stereoscopic Company, this stereoscopic card would 
+                    have been viewed through a stereoscope, producing a three-dimensional illusion of a ghostly figure. In an era 
+                    captivated by both technological innovation and supernatural exploration, the stereoscope became a tool for 
+                    engaging with the uncanny. Much like the telegraph connected distant voices, the stereoscope offered a portal 
+                    to otherworldly realms. The ghostly apparition materialized within the frame reflects the blurred boundaries 
+                    between reality and the supernatural, resonating with the exhibition’s theme of "muddled communications."
+                </li>
+            </ul>
+         <li><a href="https://www.metmuseum.org/art/collection/search/271509">Carte-de-Visite Album of British and European Royalty</a>    
             <ul>
                 <li>Carte-de-Visite Album of British and European Royalty,  Various artists/makers, ca. 1860s–70s</li>
                 <li>This poignant image of Princess Alice, dressed in mourning attire following the death of her father, Queen Victoria’s consort, Prince Albert, highlights 
@@ -115,19 +127,6 @@
                     tangible connection with the past, both personal and public.</li>
             </ul>
         </li>
-        <li><a href="https://www.metmuseum.org/art/collection/search/283105">Postmortem</a>    
-            <ul>
-                <li>Alphonse Le Blondel, French, ca. 1850 </li>
-                <li>This postmortem photograph by Alphonse Le Blondel captures the somber tradition of memorializing the deceased in the mid-nineteenth 
-                    century. In an era where death was often photographed as part of mourning rituals, this image serves as both a personal tribute and 
-                    a public acknowledgment of the fragility of life. Postmortem photography became increasingly popular during the rise of spiritualism, 
-                    a movement deeply influenced by technological advancements like the telegraph and the camera. Much like the telegraph's ability to 
-                    transcend space, photography was seen as a tool that could capture the essence of the departed, offering a fleeting connection to 
-                    those who had passed. This photograph evokes the transitional space between life and death, where the camera serves as both witness 
-                    and participant in the liminal experience. The stillness of the subject and the ethereal quality of the photograph speak to the spirit’s 
-                    elusive nature, rendering a moment of transformation into an enduring image.</li>
-            </ul>
-        </li>
         <li><a href="https://www.metmuseum.org/art/collection/search/285734">Album of Spirit Photographs</a>
             <ul>
                 <li>Frederick Hudson, ca. 1872</li>
@@ -139,17 +138,17 @@
                     spirit world..</li>
             </ul>
         </li>
-        <li><a href="https://www.metmuseum.org/art/collection/search/302466">The Ghost in the Stereoscope</a>
+        li><a href="https://www.metmuseum.org/art/collection/search/283105">Postmortem</a>    
             <ul>
-                <li>Unknown, ca. 1852</li>
-                <li>"The Ghost in the Stereoscope" exemplifies the merging of Victorian fascination with optical illusions 
-                    and spiritualist practices. Created by the London Stereoscopic Company, this stereoscopic card would 
-                    have been viewed through a stereoscope, producing a three-dimensional illusion of a ghostly figure. In an era 
-                    captivated by both technological innovation and supernatural exploration, the stereoscope became a tool for 
-                    engaging with the uncanny. Much like the telegraph connected distant voices, the stereoscope offered a portal 
-                    to otherworldly realms. The ghostly apparition materialized within the frame reflects the blurred boundaries 
-                    between reality and the supernatural, resonating with the exhibition’s theme of "muddled communications."
-                </li>
+                <li>Alphonse Le Blondel, French, ca. 1850 </li>
+                <li>This postmortem photograph by Alphonse Le Blondel captures the somber tradition of memorializing the deceased in the mid-nineteenth 
+                    century. In an era where death was often photographed as part of mourning rituals, this image serves as both a personal tribute and 
+                    a public acknowledgment of the fragility of life. Postmortem photography became increasingly popular during the rise of spiritualism, 
+                    a movement deeply influenced by technological advancements like the telegraph and the camera. Much like the telegraph's ability to 
+                    transcend space, photography was seen as a tool that could capture the essence of the departed, offering a fleeting connection to 
+                    those who had passed. This photograph evokes the transitional space between life and death, where the camera serves as both witness 
+                    and participant in the liminal experience. The stillness of the subject and the ethereal quality of the photograph speak to the spirit’s 
+                    elusive nature, rendering a moment of transformation into an enduring image.</li>
             </ul>
         </li>
     </ol>
