--- a/exhibit4.html
+++ b/exhibit4.html
@@ -101,9 +101,8 @@
     <p> The images displayed above are brought to you through the Open Acess Initiative at <a href="https://github.com/metmuseum/openaccess">The Metropolitan Museum</a> 
         using Creative Commons Zero</p>
      <ol>
-        <li><a href="https://www.metmuseum.org/art/collection/search/302466">The Ghost in the Stereoscope</a>
+        <li><a href="https://www.metmuseum.org/art/collection/search/302466">The Ghost in the Stereoscope, Unknown, ca. 1852</a>
             <ul>
-                <li>Unknown, ca. 1852</li>
                 <li>"The Ghost in the Stereoscope" exemplifies the merging of Victorian fascination with optical illusions 
                     and spiritualist practices. Created by the London Stereoscopic Company, this stereoscopic card would 
                     have been viewed through a stereoscope, producing a three-dimensional illusion of a ghostly figure. In an era 
@@ -113,9 +112,8 @@
                     between reality and the supernatural, resonating with the exhibition’s theme of "muddled communications."
                 </li>
             </ul>
-         <li><a href="https://www.metmuseum.org/art/collection/search/271509">Carte-de-Visite Album of British and European Royalty</a>    
+         <li><a href="https://www.metmuseum.org/art/collection/search/271509">Carte-de-Visite Album of British and European Royalty, Carte-de-Visite Album of British and European Royalty,  Various artists/makers, ca. 1860s–70s</a>    
             <ul>
-                <li>Carte-de-Visite Album of British and European Royalty,  Various artists/makers, ca. 1860s–70s</li>
                 <li>This poignant image of Princess Alice, dressed in mourning attire following the death of her father, Queen Victoria’s consort, Prince Albert, highlights 
                     the personal and public dimensions of grief in the Victorian era. The carte-de-visite format, which allowed these intimate portraits to be widely circulated, 
                     transformed the act of mourning into a shared experience, where the private sorrow of royalty became a public spectacle. Similarly, the photograph of Louis IV, 
@@ -126,21 +124,18 @@
                     communications." They underscore how photography, much like spiritualist practices, blurred the lines between the living and the dead—turning a moment of loss into a 
                     tangible connection with the past, both personal and public.</li>
             </ul>
-        </li>
-        <li><a href="https://www.metmuseum.org/art/collection/search/285734">Album of Spirit Photographs</a>
+        <li><a href="https://www.metmuseum.org/art/collection/search/285734">Album of Spirit Photographs, Frederick Hudson, ca. 1872</a>
             <ul>
-                <li>Frederick Hudson, ca. 1872</li>
                 <li>This photograph by Frederick Hudson, a pioneer of spirit photography, captures a spectral figure appearing alongside Mr. Reeve. Spirit photographs like this were crafted using long 
                     exposures and double exposures, blending emerging photographic techniques with spiritualist practices to evoke the presence of the departed. Hudson's work reflects the technological 
                     advancements of his era, paralleling the telegraph's ability to transmit messages across distances. The camera here acts as a planchette, visually manifesting the "muddled communications" 
                     described in the curatorial statement. The faint apparition represents the liminal space between life and death, where technology and belief intertwined to navigate the mysteries of existence.
                     This image offers a striking depiction of how photography was not merely a documentary tool but a medium for visualizing the invisible, transforming the unseen into tangible proof of the 
-                    spirit world..</li>
+                    spirit world.</li>
             </ul>
         </li>
-        li><a href="https://www.metmuseum.org/art/collection/search/283105">Postmortem</a>    
+        <li><a href="https://www.metmuseum.org/art/collection/search/283105">Postmortem, Alphonse Le Blondel, French, ca. 1850</a>    
             <ul>
-                <li>Alphonse Le Blondel, French, ca. 1850 </li>
                 <li>This postmortem photograph by Alphonse Le Blondel captures the somber tradition of memorializing the deceased in the mid-nineteenth 
                     century. In an era where death was often photographed as part of mourning rituals, this image serves as both a personal tribute and 
                     a public acknowledgment of the fragility of life. Postmortem photography became increasingly popular during the rise of spiritualism, 
