--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:100%">
+  <img src id="expandedImg" style="width:100%" alt="">
   <div id="imgtext"></div>
 </div>
 
@@ -105,7 +105,7 @@ function myFunction(imgs) {
 </div>
 
       
-    <footer id="footer">
+    <footer>
         <p>&copy; Global Museum Gateway, 2024</p>
         <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -115,5 +115,5 @@ function myFunction(imgs) {
                 </a>
             </p>
     </footer>
-    </body>
+</body>
     </html>
