--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="indexStyle.css">
 </head>
-
 <body>
     <header>
         <div class="navigation">
@@ -33,6 +32,7 @@
       
       <!-- gallery -->
       <div class="row">
+      </div>
         <div class="column">
           <img src="./images/dynamismDog.jpg" alt="Exhibit 1: Modern Art in Motion" style="width:100%" onclick="myFunction(this);">
         </div>
@@ -49,7 +49,7 @@
     
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img src id="expandedImg" style="width:100%" alt="">
+  <img id="expandedImg" style="width:100%">
   <div id="imgtext"></div>
 </div>
 
@@ -116,4 +116,4 @@ function myFunction(imgs) {
             </p>
     </footer>
 </body>
-    </html>
+</html>
