--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-  <img id="expandedImg" style="width:100%">
+  <img src id="expandedImg" style="width:100%" alt="none">
   <div id="imgtext"></div>
 </div>
 
